<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical"
    tools:context=".view.login.MainActivity">

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/Re"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/Fast_landing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="24px"
            android:text="@string/Fast_landing"
            android:textColor="@color/h9"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/common_closeImage"
            android:layout_width="36px"
            android:layout_height="36px"
            android:layout_alignBottom="@+id/Fast_landing"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:textColor="@color/h9"
            android:textSize="20sp"
            app:srcCompat="@mipmap/common_close_small" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64px"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Welcome"
            android:textColor="@color/h9"
            android:textSize="48px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128px"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="702px"
            android:layout_height="98px"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_corners"
            android:drawableLeft="@mipmap/login_phone"
            android:drawablePadding="24px"
            android:hint="@string/PhoneNumber"
            android:inputType="phone"
            android:padding="24px"
            android:textColor="@color/h9"
            android:textColorHint="@color/h9"
            android:textCursorDrawable="@drawable/editcursor"
            android:textSize="32px" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32px">

        <EditText
            android:id="@+id/InputPassword"
            android:layout_width="702px"
            android:layout_height="98px"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_corners"
            android:drawableLeft="@mipmap/login_password"
            android:drawablePadding="24px"
            android:hint="@string/InputPassword"
            android:inputType="textPassword"
            android:padding="24px"
            android:textColor="@color/h9"
            android:textColorHint="@color/h9"
            android:textCursorDrawable="@drawable/editcursor"
            android:textSize="32px" />

        <CheckBox
            android:id="@+id/login_password_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:button="@mipmap/login_password_hide"
            android:src="@mipmap/login_password_hide" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72px"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="702px"
            android:layout_height="98px"
            android:layout_marginLeft="24px"
            android:layout_marginRight="24px"
            android:background="@drawable/edit_text_corners"
            android:text="@string/Login"
            android:alpha="0.5"
            android:textColor="@color/h9"
            android:textSize="32px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48px"
        android:layout_marginRight="48px"
        android:layout_marginTop="40px">

        <TextView
            android:id="@+id/RegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/h9"
            android:textSize="26px" />

        <TextView
            android:id="@+id/ForgetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/ForgetPassword"
            android:textColor="@color/h9"
            android:textSize="26px" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="第三方登录"
            android:textColor="@color/h9"
            android:textSize="26px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:weightSum="3">

        <ImageView
            android:id="@+id/login_weiboImage"
            android:layout_width="80px"
            android:layout_height="wrap_content"
            android:layout_marginRight="98px"
            android:layout_weight="1"
            app:srcCompat="@mipmap/login_weibo" />

        <ImageView
            android:id="@+id/login_weixinImage"
            android:layout_width="80px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            app:srcCompat="@mipmap/login_weixin" />

        <ImageView
            android:id="@+id/login_qqImage"
            android:layout_width="80px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="98px"
            android:layout_weight="1"
            app:srcCompat="@mipmap/login_qq" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>