<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register_Code_Lin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical"
    tools:context=".view.login.RegisterCodeActivity">

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/Re"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/Register_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="24px"
            android:src="@mipmap/common_return_white" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64px"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Register"
            android:textColor="@color/h9"
            android:textSize="48px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128px"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/Register_PhoneNumberEd"
            android:layout_width="702px"
            android:layout_height="98px"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_corners"
            android:drawableLeft="@mipmap/login_phone"
            android:drawablePadding="24px"
            android:hint="@string/PhoneNumber"
            android:inputType="phone"
            android:padding="24px"
            android:textColor="@color/h9"
            android:textColorHint="@color/h9"
            android:textCursorDrawable="@drawable/editcursor"
            android:textSize="32px" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32px"
        >

        <EditText
            android:id="@+id/Register_PhoneCodeEd"
            android:layout_width="702px"
            android:layout_height="98px"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_corners"
            android:drawableLeft="@mipmap/login_code"
            android:drawablePadding="24px"
            android:hint="@string/Verification_Code"
            android:inputType="number"
            android:padding="24px"
            android:textColor="@color/h9"
            android:textColorHint="@color/h9"
            android:textCursorDrawable="@drawable/editcursor"
            android:textSize="32px" />

        <TextView
            android:id="@+id/Register_PhotoCodeText"
            android:layout_width="128px"
            android:layout_height="56px"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:background="@drawable/text_cursor"
            android:gravity="center_horizontal"
            android:text="获取"
            android:textColor="@color/h9"
            android:textSize="32px"
            />


    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72px"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/Register_NextBtn"
            android:layout_width="702px"
            android:layout_height="98px"
            android:layout_marginLeft="24px"
            android:layout_marginRight="24px"
            android:background="@drawable/edit_text_corners"
            android:text="@string/Next"
            android:textColor="@color/h9"
            android:textSize="32px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="48px"
        android:layout_marginRight="48px"
        android:layout_marginTop="40px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册即表示同意"
            android:textColor="@color/h9"
            android:textSize="26px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="《真漫用户协议》"
            android:textColor="@color/c4"
            android:textSize="26px" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>